--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.0",
+    "@next/bundle-analyzer": "^15.3.3",
     "@popperjs/core": "^2.11.8",
     "@radix-ui/react-avatar": "^1.1.10",
-    "@reduxjs/toolkit": "^1.9.5",
     "@types/node": "20.6.2",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
